--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "dependencies": {
         "dexie": "^4.2.0",
         "next": "15.5.2",
-        "react": "19.1.0",
-        "react-dom": "19.1.0",
+        "react": "^19.2.0",
+        "react-dom": "^19.2.0",
         "zod": "^4.1.5",
         "zustand": "^5.0.8"
     },
